--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "dev": "next dev",
     "start": "next start",
     "lint": "next lint"
-    },
+  },
   "dependencies": {
     "firebase": "^9.10.0",
     "moment": "^2.29.4",
-    "next": "12.3.1",
-    "react": "18.2.0",
+    "next": "^12.3.1",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0"
   },
